fixed the links and got the header aligned

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,40 @@
 *{
-
+font-family: sans-serif;
+font-size: 16px;
+/*background-color: darkslateblue;*/
+padding: 10px;
+margin: 10px;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+header{
+    display: flex;
+    background-color: aqua;
+    justify-content: space-between;
+}
+header h1{
+    font-size: 200%;
+    display: flex;
+    align-items: center;
 }
 
-header{
+header img{
+    justify-content: center;
+}
+header nav{
+    display: flex;
+    align-items: center;
+}
 
+header ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+header ul li{
+    padding: 10px;
 }
 
 body {
